having issues with bitbucket repo since trying to dup everything in git, copied latest over to this repo and going to continue work from here. at this state it is pretty much iPhone Beta version ready for testing & tweaking

--- a/Giddy Goat Coffee/Giddy Goat Coffee/Giddy Goat Coffee-Info.plist
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/Giddy Goat Coffee-Info.plist
@@ -18,6 +18,7 @@
 				<string>Icon.png</string>
 				<string>Icon-72.png</string>
 				<string>Default.png</string>
+				<string>Default@2x.png</string>
 			</array>
 		</dict>
 	</dict>
