--- a/Giddy Goat Coffee/Giddy Goat Coffee/Giddy Goat Coffee-Info.plist
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/Giddy Goat Coffee-Info.plist
@@ -20,6 +20,8 @@
 				<string>Default.png</string>
 				<string>Default@2x.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -42,6 +44,8 @@
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard_iPad</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
