--- a/Giddy Goat Coffee/Giddy Goat Coffee/Giddy Goat Coffee-Info.plist
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/Giddy Goat Coffee-Info.plist
@@ -25,7 +25,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>info.myappleguy.giddy.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>me.toddpickell.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
