got menu working and animating nice but buttons don't register touches but do respond I believe that when I converted the awesomeMenu classes over to arc and fixed some of the issues I may have broke the delegate functionality of the class. will try to fix that next..

--- a/Giddy Goat Coffee/Giddy Goat Coffee/Giddy Goat Coffee-Info.plist
+++ b/Giddy Goat Coffee/Giddy Goat Coffee/Giddy Goat Coffee-Info.plist
@@ -41,7 +41,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
-	<string>MainStoryboard_iPhone</string>
+	<string>NewStoryboard</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
